sidebar transition on tablet and mobile CSS and JS code fixes and upates

--- a/Style-Sheets/nav-header.css
+++ b/Style-Sheets/nav-header.css
@@ -10,10 +10,10 @@
     min-height: 10vh;
     box-shadow: 5px 5px 10px 1px rgba(0, 0, 0, 0.322);
     height: auto;
-    background: #2d314270;
+    background: #2d3142e0;
     position: fixed;
     top: 0;
-    z-index: 5;
+    z-index: 2;
   }
 }
 
@@ -26,7 +26,7 @@
     align-items: center;
     width: 100vw;
     min-height: 10vh;
-    background: #2d31425b;
+    background: #2d3142;
     position: fixed;
     top: 0;
     z-index: 2;
